[gd_scene load_steps=6 format=3 uid="uid://ccb4jaydyjrbl"]

[ext_resource type="Script" path="res://scenes/enemy_info_container.gd" id="1_4ndm6"]

[sub_resource type="Gradient" id="Gradient_mvp20"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vadxw"]
gradient = SubResource("Gradient_mvp20")
width = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03f7q"]
bg_color = Color(0.000693897, 0.000693898, 0.000693897, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lga6"]
bg_color = Color(0.917647, 0, 0, 1)

[node name="enemy_info_container" type="VBoxContainer"]
size_flags_vertical = 3
script = ExtResource("1_4ndm6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="portrait" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture1D_vadxw")

[node name="enemy_name" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[node name="health_bar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_03f7q")
theme_override_styles/fill = SubResource("StyleBoxFlat_2lga6")
step = 1.0
show_percentage = false

[node name="health_label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="effects_info" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="status_effects" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
